New Changes and Page

--- a/public/register.css
+++ b/public/register.css
@@ -1,33 +1,46 @@
 body {
-    background-image: url(./images//blue.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-height: 100vh;
-    font-family: Big Caslon, Book Antiqua, Palatino Linotype, Georgia, serif;
-    padding: 0;
+
     margin: 0;
-    justify-content: center; 
-    align-items: center; 
+    padding: 0;
+    font-family: poppins, sans-serif;
   }
+
+  body{
+    margin: 0;
+    font-family: "Times New Roman", Times, serif;
+    background-size: cover;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-image: url(./images/blue.jpeg);
+    overflow: hidden;
+  }
+  
   ul {
+  
     margin-right: 4em;
     flex-direction: row-reverse;
     display: flex;
   }
   li {
-    margin: 10px;
+    background: transparent;
+    margin-right: 10px;
     list-style: none;
     justify-content: space-between;
   }
   a {
+    font-family: Big Caslon, Book Antiqua, Palatino Linotype, Georgia, serif;
+  
+    background: transparent;
     font-weight: bold;
     font-size: 15px;
-    color: rgb(248, 246, 243);
+    color: rgb(245, 245, 245);
   }
+
 
   .container{
 	position: relative;
 	display: flex;
+    flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	padding: 20px 100px;
@@ -43,7 +56,7 @@ height: 100vh;
 	top: 0;
 	background: url("img/bg.jpg") no-repeat center;
 	background-size: cover;
-	filter: blur(50px);
+	filter: blur(60px);
 	z-index: -1;
 }
 .contact-box{
@@ -56,19 +69,15 @@ height: 100vh;
 	background-color:transparent;
 	box-shadow: 0px 0px 19px 5px rgba(33, 33, 33, 0.19);
 }
-
-.left{
-	background: url("img/bg.jpg") no-repeat center;
-	background-size: cover;
-	height: 100%;
+form{
+    max-width:600px;
+    padding: 20px;
 }
-
 .right{
     background: transparent;
     backdrop-filter: blur(5px);
 	padding: 25px 40px;
 }
-
 h2{
     color: white;
 	position: relative;
@@ -76,21 +85,9 @@ h2{
 	margin-bottom: 10px;
 }
 
-h2:after{
-	content: '';
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    height: 4px;
-    width: 50px;
-    border-radius: 2px;
-    background-color: #1a21e1;
-}
-
 .field{
     color: black;
-	width: 100%;
+	width:90%;
 	border: 2px solid rgba(0, 0, 0, 0);
 	outline: none;
 	background-color: rgba(230, 230, 230, 0.6);
@@ -104,12 +101,14 @@ h2:after{
 	background-color: rgba(0, 0, 0, 0.1);
 }
 
-textarea{
-	min-height: 150px;
+.txt{
+    color: #bae4f3;
+
 }
 
 .btn{
-	width: 105%;
+    margin: 3px;
+	width: 95%;
 	padding: 0.5rem 1rem;
 	background-color: #1728a9;
 	color: #fff;
@@ -127,4 +126,8 @@ textarea{
 .field:focus{
     border: 2px solid rgba(30,85,250,0.47);
     background-color: #fff;
+}
+
+span{
+	color: rgb(121, 11, 11);
 }
