--- a/public/about.css
+++ b/public/about.css
@@ -1,35 +1,39 @@
 * {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-image: url(./images/back.jpg);
   margin: 0;
   padding: 0;
+}
+body {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.6) rgba(0, 0, 0, 1.3));
+  background-image: url(./images/back.jpg);
+  height: 100vh;
+  justify-content: center;
   font-family: poppins, sans-serif;
 }
 
 ul {
-    background: transparent;
+  background: transparent;
 
-    margin-right: 4em;
-    flex-direction: row-reverse;
-    display: flex;
-  }
-  li {
-    background: transparent;
+  margin-right: 4em;
+  flex-direction: row-reverse;
+  display: flex;
+}
+li {
+  background: transparent;
 
-    margin: 10px;
-    list-style: none;
-    justify-content: space-between;
-  }
-  a {
-    font-family: Big Caslon, Book Antiqua, Palatino Linotype, Georgia, serif;
+  margin: 10px;
+  list-style: none;
+  justify-content: space-between;
+}
+a {
+  font-family: Big Caslon, Book Antiqua, Palatino Linotype, Georgia, serif;
 
-    background: transparent;
-    font-weight: bold;
-    font-size: 15px;
-    color: rgb(248, 246, 243);
-  }
-
+  background: transparent;
+  font-weight: bold;
+  font-size: 15px;
+  color: rgb(248, 246, 243);
+}
 
 .main-nav {
   position: absolute;
@@ -52,7 +56,7 @@ ul {
   transition: 0.5s;
   margin: -100px;
   overflow: hidden;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .main-nav li:hover {
@@ -97,25 +101,25 @@ ul {
 }
 
 .main-nav li.item2 .bg {
-    background: url(./images/img2.jpg);
-    background-size: cover;
+  background: url(./images/img2.jpg);
+  background-size: cover;
   background-position: center;
 }
 
 .main-nav li.item3 .bg {
-    background: url(./images/img3.jpg);
-    background-size: cover;
+  background: url(./images/img3.jpg);
+  background-size: cover;
   background-position: center;
 }
 
 .main-nav li.item4 .bg {
-    background: url(./images/img4.jpg);
-    background-size: cover;
+  background: url(./images/img4.jpg);
+  background-size: cover;
   background-position: center;
 }
 
 .main-nav li.item5 .bg {
-    background: url(./images/img5.jpg);
-    background-size: cover;
+  background: url(./images/img5.jpg);
+  background-size: cover;
   background-position: center;
 }
