--- a/views/about.html
+++ b/views/about.html
@@ -7,32 +7,30 @@
   <body>
     <nav>
       <ul>
-        <li><a href="/">Back to Home</a></li>
-        <li><a href="/contact">Contact Me</a></li>
+        <li><a href="/">HOME</a></li>
+        <li><a href="/bio">BIOGRAPHY</a></li>
+        <li><a href="/register">SIGN IN</a></li>
+
+        <li><a href="/contact">CONTACT</a></li>
       </ul>
     </nav>
 
-    <section>
-        <ul class="main-nav">
-            <li class="item1">
-              <div class="bg"></div>
-            </li>
-            <li class="item2">
-              <div class="bg"></div>
-            </li>
-            <li class="item3">
-              <div class="bg"></div>
-            </li>
-            <li class="item4">
-              <div class="bg"></div>
-            </li>
-            <li class="item5">
-              <div class="bg"></div>
-            </li>
-          </ul>
-    </section>
-
-
-   
+    <ul class="main-nav">
+      <li class="item1">
+        <div class="bg"></div>
+      </li>
+      <li class="item2">
+        <div class="bg"></div>
+      </li>
+      <li class="item3">
+        <div class="bg"></div>
+      </li>
+      <li class="item4">
+        <div class="bg"></div>
+      </li>
+      <li class="item5">
+        <div class="bg"></div>
+      </li>
+    </ul>
   </body>
 </html>
