--- a/views/contact.html
+++ b/views/contact.html
@@ -9,7 +9,10 @@
      <nav>
        <ul>
          <li><a href="/">HOME</a></li>
-         <li><a href="/about">ABOUT</a></li>
+         <li><a href="/about">PICTURES</a></li>
+         <li><a href="/register">SIGN IN</a></li>
+
+
        </ul>
      </nav>
      <div class="container">
