--- a/views/index.html
+++ b/views/index.html
@@ -7,9 +7,11 @@
   <body>
     <nav>
       <ul>
-        <li><a href="/about">ABOUT</a></li>
+        <li><a href="/about">PICTURES</a></li>
         <li><a href="/contact">CONTACT</a></li>
-        <li><a href="/Galle">IMAGES</a></li>
+        <li><a href="/bio">BIOGRAPHY</a></li>
+        <li><a href="/register">SIGN IN</a></li>
+
       </ul>
     </nav>
     <div class="mainContain">
