--- a/views/index.html
+++ b/views/index.html
@@ -5,17 +5,19 @@
     <link rel="stylesheet" href="/index.css" />
   </head>
   <body>
-    <nav>
-      <ul>
+    <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon" />
+    <label for="menu-icon"></label>
+    <nav class="nav">
+      <ul class="pt-5">
         <li><a href="/about">PICTURES</a></li>
         <li><a href="/contact">CONTACT</a></li>
         <li><a href="/bio">BIOGRAPHY</a></li>
         <li><a href="/register">SIGN IN</a></li>
-
+        <li><a href="/chat">Lorem CHAT</a></li>
       </ul>
     </nav>
     <div class="mainContain">
-      <h1>lorem ipsum</h1>
+      <h2 class="lorem">lorem ipsum</h2>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt expedita
         labore facilis nihil harum dolorem esse, ducimus repudiandae ut et!
