--- a/views/index.html
+++ b/views/index.html
@@ -9,11 +9,13 @@
     <label for="menu-icon"></label>
     <nav class="nav">
       <ul class="pt-5">
+        <li><a href="/chat">Lorem CHAT</a></li>
+        <li><a href="/bio">BIOGRAPHY</a></li>
         <li><a href="/about">PICTURES</a></li>
         <li><a href="/contact">CONTACT</a></li>
-        <li><a href="/bio">BIOGRAPHY</a></li>
+        
         <li><a href="/register">SIGN IN</a></li>
-        <li><a href="/chat">Lorem CHAT</a></li>
+        <li><a href="/SHOP">SHOP</a></li>
       </ul>
     </nav>
     <div class="mainContain">
