chanes to nav bar in contact page

--- a/views/contact.html
+++ b/views/contact.html
@@ -1,35 +1,36 @@
-
- <!DOCTYPE html>
- <html>
-   <head>
-     <title>CONTACT</title>
-     <link rel="stylesheet" href="/contact.css" />
-   </head>
-   <body>
-     <nav>
-       <ul>
-         <li><a href="/">HOME</a></li>
-         <li><a href="/about">PICTURES</a></li>
-         <li><a href="/register">SIGN IN</a></li>
-
-
-       </ul>
-     </nav>
-     <div class="container">
-         <div class="contact-box">
-             <div class="left"></div>
-             <div class="right">
-                 <h2>Contact Me</h2>
-                 <input type="text" class="field" placeholder="Your Name">
-                 <input type="text" class="field" placeholder="Your Email">
-                 <input type="text" class="field" placeholder="Phone">
-                 <textarea placeholder="Message" class="field"></textarea>
-                 <button class="btn">Send</button>
-             </div>
-         </div>
-     </div>
-       
-     </div>
-   </body>
- </html>
- 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/contact.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon" />
+    <label for="menu-icon"></label>
+    <nav class="nav">
+      <ul class="pt-5">
+        <li><a href="/">HOME</a></li>
+        <li><a href="/chat">Lorem CHAT</a></li>
+        <li><a href="/bio">BIOGRAPHY</a></li>
+        <li><a href="/about">PICTURES</a></li>
+        <li><a href="/register">SIGN IN</a></li>
+        <li><a href="/SHOP">SHOP</a></li>
+      </ul>
+    </nav>
+    <div class="container">
+      <div class="contact-box">
+        <div class="left"></div>
+        <div class="right">
+          <h2>Contact Me</h2>
+          <input type="text" class="field" placeholder="Your Name" />
+          <input type="text" class="field" placeholder="Your Email" />
+          <input type="text" class="field" placeholder="Phone" />
+          <textarea placeholder="Message" class="field"></textarea>
+          <button class="btn">Send</button>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
